/ ‘Algebra/Review Doc/AlgebraQualNotes.html’ / ‘Algebra/Review Doc/AlgebraQualNotes.pdf’ - ‘Algebra/Review Doc/tex_tempfiles/AlgebraQualNotes.pdf’

--- a/Algebra/Review Doc/AlgebraQualNotes.html
+++ b/Algebra/Review Doc/AlgebraQualNotes.html
@@ -204,7 +204,7 @@
 <li><a href="#modules-and-linear-algebra"><span class="toc-section-number">8.4</span> Modules and Linear Algebra</a></li>
 <li><a href="#linear-algebra-2"><span class="toc-section-number">8.5</span> Linear Algebra</a></li>
 </ul></li>
-<li><a href="#even-more-algebra-question-in-progress"><span class="toc-section-number">9</span> Even More Algebra Question (In Progress)</a>
+<li><a href="#even-more-algebra-questions"><span class="toc-section-number">9</span> Even More Algebra Questions</a>
 <ul>
 <li><a href="#groups"><span class="toc-section-number">9.1</span> Groups</a>
 <ul>
@@ -2880,7 +2880,10 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 </ul>
 <h2 data-number="8.5" id="linear-algebra-2"><span class="header-section-number">8.5</span> Linear Algebra</h2>
 
-<h1 data-number="9" id="even-more-algebra-question-in-progress"><span class="header-section-number">9</span> Even More Algebra Question (In Progress)</h1>
+<h1 data-number="9" id="even-more-algebra-questions"><span class="header-section-number">9</span> Even More Algebra Questions</h1>
+<div class="remark proofenv">
+<p>(DZG): These all come from a random PDF I found, but I couldn’t find the original author/source!</p>
+</div>
 <h2 data-number="9.1" id="groups"><span class="header-section-number">9.1</span> Groups</h2>
 <h3 data-number="9.1.1" id="question-1.1"><span class="header-section-number">9.1.1</span> Question 1.1</h3>
 <p>What is a normal subgroup? Can you get some natural map from a normal subgroup? What topological objects can the original group, normal subgroup, and quotient group relate to?</p>
@@ -2973,7 +2976,7 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <p>A subgroup of a finitely-generated free abelian group is?</p>
 <p>A subgroup of a finitely-generated free group is..? Prove your answers.</p>
 <h3 data-number="9.1.42" id="question-1.42"><span class="header-section-number">9.1.42</span> Question 1.42</h3>
-
+<p>What are the subgroups of <span class="math inline">\({\mathbb{Z}}^2\)</span>?</p>
 <h3 data-number="9.1.43" id="question-1.43"><span class="header-section-number">9.1.43</span> Question 1.43</h3>
 <p>What are the subgroups of the free group <span class="math inline">\(F_2\)</span>? How many generators can you have?</p>
 <p>Can you find one with 3 generators? 4 generators? Countably many generators?</p>
@@ -3068,11 +3071,21 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <h3 data-number="9.3.22" id="question-3.22"><span class="header-section-number">9.3.22</span> Question 3.22</h3>
 <p>What is the Galois group of <span class="math inline">\(x^2 - 2\)</span>? Why is <span class="math inline">\(x^2 - 2\)</span> irreducible?</p>
 <h3 data-number="9.3.23" id="question-3.23"><span class="header-section-number">9.3.23</span> Question 3.23</h3>
-
+<p>What is the Galois group of 
+<span class="math display">
+\begin{align*}
+{\mathbb{Q}}(\sqrt 2, \sqrt 3)\, / \, {\mathbb{Q}}
+?\end{align*}
+<span></p>
 <h3 data-number="9.3.24" id="question-3.24"><span class="header-section-number">9.3.24</span> Question 3.24</h3>
-
+<p>What is the Galois group of 
+<span class="math display">
+\begin{align*}
+{\mathbb{Q}}\qty{ \sqrt{n_1}, \cdots, \sqrt{n_m} } \, / \, {\mathbb{Q}}(\sqrt{n_1} + \cdots + \sqrt{n_m})
+?\end{align*}
+<span></p>
 <h3 data-number="9.3.25" id="question-3.25"><span class="header-section-number">9.3.25</span> Question 3.25</h3>
-<p>What are the Galois groups of irreducible cubics? </p>
+<p>What are the Galois groups of irreducible cubics?</p>
 <h3 data-number="9.3.26" id="question-3.26"><span class="header-section-number">9.3.26</span> Question 3.26</h3>
 <p>If an irreducible cubic polynomial has Galois group NOT contained in A3, does it necessarily have to be all of <span class="math inline">\(S_3\)</span>?</p>
 <h3 data-number="9.3.27" id="question-3.27"><span class="header-section-number">9.3.27</span> Question 3.27</h3>
@@ -3132,7 +3145,7 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <h3 data-number="9.3.54" id="question-3.54"><span class="header-section-number">9.3.54</span> Question 3.54</h3>
 <p>Suppose you are given a finite Galois extension <span class="math inline">\(K/{\mathbb{Q}}\)</span> by <span class="math inline">\(f(x) \in {\mathbb{Z}}[x]\)</span> such that <span class="math inline">\(\deg(f ) = n\)</span> and <span class="math inline">\(\operatorname{Gal}(K/Q) = S_n\)</span>. What can you say about the roots?</p>
 <h3 data-number="9.3.55" id="question-3.55"><span class="header-section-number">9.3.55</span> Question 3.55</h3>
-<p>How many automorphisms does the complex field have? How can you extend the automorphisms of an algebraic field into <span class="math inline">\({\mathbb{C}}\)</span>? How can you extend a simple automorphism (e.g. a general subfield isomorphism? What feature of <span class="math inline">\({\mathbb{C}}\)</span> allows you to? </p>
+<p>How many automorphisms does the complex field have? How can you extend a simple automorphism <span class="math inline">\(\sqrt{2} \mapsto -\sqrt{2}\)</span> of an algebraic field into <span class="math inline">\({\mathbb{C}}\)</span>? How can you extend a subfield automorphism? What feature of <span class="math inline">\({\mathbb{C}}\)</span> allows you to?</p>
 <h3 data-number="9.3.56" id="question-3.56."><span class="header-section-number">9.3.56</span> Question 3.56.</h3>
 <p>Can it happen that a proper subfield of C is isomorphic to C? How?</p>
 <h3 data-number="9.3.57" id="question-3.57"><span class="header-section-number">9.3.57</span> Question 3.57</h3>
@@ -3203,7 +3216,7 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <h3 data-number="9.4.11" id="question-4.11"><span class="header-section-number">9.4.11</span> Question 4.11</h3>
 <p>Describe all the conjugacy classes of <span class="math inline">\(3 \times 3\)</span> matrices with rational entries which satisfy the equation <span class="math inline">\(A^4 - A^3 - A + 1 = 0\)</span>. Give a representative in each class.</p>
 <h3 data-number="9.4.12" id="question-4.12"><span class="header-section-number">9.4.12</span> Question 4.12</h3>
-<p>What <span class="math inline">\(3 \times 3\)</span> matrices over the rationals (up to similarity) satisfy <span class="math inline">\(f (A) = 0\)</span>, where <span class="math inline">\(f (x) = (x^2 + 2)(x - 1)^3\)</span>? List all possible rational forms. </p>
+<p>What <span class="math inline">\(3 \times 3\)</span> matrices over the rationals (up to similarity) satisfy <span class="math inline">\(f (A) = 0\)</span>, where <span class="math inline">\(f (x) = (x^2 + 2)(x - 1)^3\)</span>? List all possible rational forms.</p>
 <h3 data-number="9.4.13" id="question-4.13"><span class="header-section-number">9.4.13</span> Question 4.13</h3>
 <p>What can you say about matrices that satisfy a given polynomial (over an algebraically closed field)? How many of them are there? What about over a finite field? How many such matrices are there then?</p>
 <h3 data-number="9.4.14" id="question-4.14"><span class="header-section-number">9.4.14</span> Question 4.14</h3>
@@ -3269,7 +3282,7 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <h3 data-number="9.6.2" id="question-6.2"><span class="header-section-number">9.6.2</span> Question 6.2</h3>
 <p>What is a PID? What’s an example of a UFD that is not a PID? Why? Is <span class="math inline">\(k[x]\)</span> a PID? Why?</p>
 <h3 data-number="9.6.3" id="question-6.3"><span class="header-section-number">9.6.3</span> Question 6.3</h3>
-<p>Is <span class="math inline">\({\mathbb{C}}[x, y]\)</span> a PID? What are the prime ideals in it? </p>
+<p>Is <span class="math inline">\({\mathbb{C}}[x, y]\)</span> a PID? Is <span class="math inline">\(\left\langle{ x, y }\right\rangle\)</span> a prime ideals in it?</p>
 <h3 data-number="9.6.4" id="question-6.4"><span class="header-section-number">9.6.4</span> Question 6.4</h3>
 <p>Do polynomials in several variables form a PID?</p>
 <h3 data-number="9.6.5" id="question-6.5"><span class="header-section-number">9.6.5</span> Question 6.5</h3>
@@ -3321,7 +3334,13 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <h3 data-number="9.6.28" id="question-6.28"><span class="header-section-number">9.6.28</span> Question 6.28</h3>
 <p>What are the prime ideals and maximal ideals of <span class="math inline">\({\mathbb{Z}}[x]\)</span>?</p>
 <h3 data-number="9.6.29" id="question-6.29"><span class="header-section-number">9.6.29</span> Question 6.29</h3>
-
+<p>Is the following map an isomorphism? 
+<span class="math display">
+\begin{align*}
+{\mathbb{Z}}[t] / \left\langle{ t^p - 1 }\right\rangle  &amp;\to {\mathbb{Z}}[w] \\
+t &amp;\mapsto w \text{ where } w^p = 1
+.\end{align*}
+<span></p>
 <h3 data-number="9.6.30" id="question-6.30"><span class="header-section-number">9.6.30</span> Question 6.30</h3>
 <p>Describe the left, right, and two-sided ideals in the ring of square matrices of a fixed size. Now identify the matrix algebra <span class="math inline">\(\operatorname{Mat}(n \times n, K)\)</span> with <span class="math inline">\(\operatorname{End}_K(V )\)</span> where <span class="math inline">\(V\)</span> is an <span class="math inline">\(n{\hbox{-}}\)</span>dimensional K-vector space. Try to geometrically describe the simple left ideals and also the simple right ideals via that identification.</p>
 <h3 data-number="9.6.31" id="question-6.31"><span class="header-section-number">9.6.31</span> Question 6.31</h3>
@@ -3354,6 +3373,12 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <p>Do you know an example of a local ring? Another one? What about completions?</p>
 <h3 data-number="9.6.45" id="question-6.45"><span class="header-section-number">9.6.45</span> Question 6.45</h3>
 <p>Consider the space of functions from the natural numbers to <span class="math inline">\({\mathbb{C}}\)</span> endowed with the usual law of addition and the following analogue of the convolution product:</p>
+<p>
+<span class="math display">
+\begin{align*}
+(f\ast g)(n) = \sum_{d\divides n}^{}f(d) g\qty{n\over d}
+.\end{align*}
+<span></p>
 <p>Show that this is a ring. What does this ring remind you of and what can you say about it?</p>
 <h3 data-number="9.6.46" id="question-6.46"><span class="header-section-number">9.6.46</span> Question 6.46</h3>
 <p>Prove that any finite division ring is a field (that is, prove commutativity). Give an example of a (necessarily infinite) division ring which is NOT a field.</p>
@@ -3463,9 +3488,8 @@ a + \mathfrak N(R)\text{ nilpotent } &amp;\implies (a+ \mathfrak N(R))^n \mathre
 <p>What classical function in mathematics does this number relate to?</p>
 <h3 data-number="9.8.32" id="question-8.32"><span class="header-section-number">9.8.32</span> Question 8.32</h3>
 <p>Discuss representations of <span class="math inline">\({\mathbb{Z}}\)</span>, the infinite cyclic group. What is the group algebra of <span class="math inline">\({\mathbb{Z}}\)</span>?</p>
-<p>What is the connection </p>
 <h3 data-number="9.8.33" id="question-8.33"><span class="header-section-number">9.8.33</span> Question 8.33</h3>
-<p>What is a Lie group? Define a unitary representation. What is the Peter– Weyl theorem? What is the Lie algebra? The Jacobi identity? What is the adjoint representation of a Lie algebra? What is the commutator of two vector fields on a manifold?</p>
+<p>What is a Lie group? Define a unitary representation. What is the Peter–Weyl theorem? What is the Lie algebra? The Jacobi identity? What is the adjoint representation of a Lie algebra? What is the commutator of two vector fields on a manifold?</p>
 <p>When is a representation of <span class="math inline">\({\mathbb{Z}}\)</span> completely reducible? Why?</p>
 <p>Which are the indecomposable modules?</p>
 <h3 data-number="9.8.34" id="question-8.34"><span class="header-section-number">9.8.34</span> Question 8.34</h3>
