--- a/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.html
+++ b/Algebra/UGA Question (with solutions)/UGA_Algebra_Qual_Solutions.html
@@ -2825,7 +2825,7 @@ a\curvearrowright bm = (ab)\curvearrowright m = 0\curvearrowright m = 0_M
 <li>Todo</li>
 </ul>
 </div>
-<p>:::{.solution} </p>
+<div class="solution proofenv">
 <div class="proof proofenv" title="of a">
 <ul>
 <li>Suppose toward a contradiction <span class="math inline">\(\operatorname{Tor}(M)\)</span> has rank <span class="math inline">\(n \geq 1\)</span>.</li>
@@ -2930,6 +2930,7 @@ a\curvearrowright bm = (ab)\curvearrowright m = 0\curvearrowright m = 0_M
 <li><p>Let <span class="math inline">\(\mathbf{x} \in \operatorname{Tor}M\)</span>, then there exists some <span class="math inline">\(r\neq 0\in R\)</span> such that <span class="math inline">\(r\mathbf{x} = \mathbf{0}\)</span>.</p></li>
 <li><p>But <span class="math inline">\(\mathbf{x}\in R\)</span> as well and <span class="math inline">\(R\)</span> is an integral domain, so <span class="math inline">\(\mathbf{x}=0_R\)</span>, and thus <span class="math inline">\(\operatorname{Tor}(M) = \left\{{0_R}\right\}\)</span>.</p></li>
 </ul>
+</div>
 </div>
 </div>
 <h3 data-number="9.2.3" id="star-spring-2020-6-done"><span class="header-section-number">9.2.3</span> <span class="math inline">\(\star\)</span> Spring 2020 #6 <span class="math inline">\(\done\)</span></h3>
